<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_page"
        android:enabled="true"
        android:icon="@drawable/default_icon"
        android:title="@string/main_bottomMenu"/>
    <item
        android:id="@+id/trips_page"
        android:enabled="true"
        android:icon="@drawable/default_icon"
        android:title="@string/trip_bottomMenu"/>
    <item
        android:id="@+id/favorites_page"
        android:enabled="true"
        android:icon="@drawable/default_icon"
        android:title="@string/favorites_bottomMenu"/>
    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/default_icon"
        android:title="@string/profile_bottomMenu"/>
</menu>