<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoTripsFragment">

    <!-- TODO: Update blank fragment layout -->

    <View
        android:id="@+id/separator4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="@color/textSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="120dp"
        app:layout_constraintTop_toBottomOf="@+id/separator4"
        tools:layout_editor_absoluteX="-38dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/no_trips_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/noTrips_label"
                android:textColor="@color/textMain"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/no_trips_label2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/createFirstTrip_label"
                android:textColor="@color/textMain"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/no_trips_label" />

            <TextView
                android:id="@+id/joinByCode_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/JoinByCode_label"
                android:textColor="@color/textMain"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createFirstTrip_button" />

            <TextView
                android:id="@+id/joinByCode_labelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:gravity="center"
                android:text="@string/join_section"
                android:textColor="@color/textMain2"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/joinByCode_Input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toEndOf="@+id/joinByCode_Input"
                app:layout_constraintTop_toTopOf="@+id/joinByCode_Input" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createFirstTrip_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@color/white"
                android:backgroundTintMode="add"
                android:drawableLeft="@drawable/add_blue_24"
                android:ellipsize="end"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:shadowColor="@color/textMain2"
                android:text="@string/createTrip_label"
                android:textAllCaps="false"
                android:textColor="@color/textMain2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/no_trips_label2" />

            <EditText
                android:id="@+id/joinByCode_Input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ellipsize="end"
                android:ems="9"
                android:fontFamily="sans-serif"
                android:hint="@string/EnterCode_hint"
                android:inputType="textPersonName"
                android:scrollbarThumbVertical="@color/black"
                android:textColor="@color/textMain"
                android:textColorHint="@color/textSecondary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.28"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/joinByCode_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/noTrips_main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/trip_main_label"
        android:textColor="@color/textMain"
        android:textColorHint="@color/black"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>