<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTripFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/createTrip_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:src="@drawable/arrow_back_32"
        app:layout_constraintBottom_toTopOf="@+id/separator4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/arrow_back_32" />

    <View
        android:id="@+id/separator4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="@color/textSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="120dp"
        app:layout_constraintTop_toBottomOf="@+id/separator4"
        tools:layout_editor_absoluteX="-16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/newTripLabel_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="24dp"
                android:text="@string/tripName_input"
                android:textColor="@color/textMain"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/newTripCity_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/tripCity_input"
                android:textColor="@color/textMain"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newTripName_input" />

            <TextView
                android:id="@+id/newTripCity_label2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:text="@string/CreateTripStartDate_label"
                android:textColor="@color/textMain"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newTripCity_list" />

            <TextView
                android:id="@+id/newTripCity_label3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/CreateTripEndDate_label"
                android:textColor="@color/textMain"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newTripStartDate_input" />

            <EditText
                android:id="@+id/newTripStartDate_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:drawableEnd="@drawable/_calendar_blue_24"
                android:ems="10"
                android:inputType="date"
                android:textColor="@color/textMain"
                android:textColorHint="@color/textSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newTripCity_label2" />

            <EditText
                android:id="@+id/newTripEndDate_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:drawableEnd="@drawable/_calendar_blue_24"
                android:ems="10"
                android:inputType="date"
                android:textColor="@color/textMain"
                android:textColorHint="@color/textSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newTripCity_label3" />

            <TextView
                android:id="@+id/joinByCode_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="24dp"
                android:gravity="start"
                android:text="@string/JoinByCode_label"
                android:textColor="@color/textMain"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createFirstTrip_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/joinByCodeInCreate_Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@color/textMain2"
                android:gravity="center"
                android:text="@string/join_section"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                android:textColorLink="#FFFFFF"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/joinByCodeInCreate_Input" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createFirstTrip_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@color/textMain2"
                android:backgroundTintMode="add"
                android:ellipsize="end"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:shadowColor="@color/textMain2"
                android:text="@string/createTrip_label"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newTripEndDate_input" />

            <EditText
                android:id="@+id/joinByCodeInCreate_Input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ellipsize="end"
                android:ems="9"
                android:fontFamily="sans-serif"
                android:hint="@string/EnterCode_hint"
                android:inputType="textPersonName"
                android:scrollbarThumbVertical="@color/black"
                android:textColor="@color/textMain"
                android:textColorHint="@color/textSecondary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/joinByCode_label" />

            <EditText
                android:id="@+id/newTripName_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/textMain"
                android:textColorHint="@color/textSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newTripLabel_label" />

            <Spinner
                android:id="@+id/newTripCity_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newTripCity_label" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/createTrip_main_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/createTrip_main_label"
        android:textColor="@color/textMain"
        android:textColorHint="@color/black"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/createTrip_back"
        app:layout_constraintStart_toEndOf="@+id/createTrip_back"
        app:layout_constraintTop_toTopOf="@+id/createTrip_back" />

</androidx.constraintlayout.widget.ConstraintLayout>